Another scrollbar fix for IE

--- a/app/assets/stylesheets/globals/pygments.scss
+++ b/app/assets/stylesheets/globals/pygments.scss
@@ -9,6 +9,7 @@ code, pre {
   color: #709dbd;
   @include border-radius(3px);
   word-break: normal;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 code {
@@ -26,6 +27,7 @@ pre {
   font-family: "Consolas", "Courier New", "Courier", "FreeMono", monospace;
   font-size: 1em;
   overflow-x: scroll;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 .highlight { overflow:hidden; }
